--- a/sass/parts/_footers.scss
+++ b/sass/parts/_footers.scss
@@ -21,6 +21,7 @@ footer{
                 display: block;
 
                 &:hover{
+                    color: $blue-A700;
                     text-decoration: none;
                 }
             }
