--- a/sass/parts/_variables.scss
+++ b/sass/parts/_variables.scss
@@ -23,7 +23,7 @@ $white-color: #FFFFFF !default;
 
 $gray-color:  #999999 !default;
 
-$brand-primary: $airy-blue !default;
+$brand-primary: $cyan-A700 !default;
 $brand-success: $green !default;
 $brand-danger: $red !default;
 $brand-warning: $yellow !default;
