--- a/sass/parts/_navbar.scss
+++ b/sass/parts/_navbar.scss
@@ -7,19 +7,19 @@
   @include shadow-big-navbar();
 
   @extend .animation-transition-fast;
-
+  $nav-text-color: $blue-grey-500;
   padding: 6px 0;
 
   .navbar-brand {
     position: relative;
     height: 50px;
     line-height: 30px;
-    color: $brand-primary;
+    color: $nav-text-color;
     padding: 10px 15px;
 
     &:hover,
     &:focus {
-      color: $brand-primary;
+      color: $nav-text-color;
       background-color: transparent;
     }
   }
@@ -32,19 +32,18 @@
 
   .navbar-nav {
     > li > a {
-      color: $brand-primary;
+      color: $nav-text-color;
       padding-top: 15px;
       padding-bottom: 15px;
 
       font-weight: $font-weight-default;
-      font-size: $mdb-btn-font-size-base;
+      font-size: $mdb-btn-font-size-lg;
       text-transform: uppercase;
 
       border-radius: $border-radius-base;
 
       &:hover,
       &:focus {
-        color: $brand-primary;
         background-color: transparent;
       }
 
@@ -100,8 +99,7 @@
       background-color: transparent;
     }
     .icon-bar {
-      background-color: inherit;
-      border: 1px solid;
+      background-color: $nav-text-color !important;
     }
   }
 
@@ -246,11 +244,17 @@
   &.navbar-transparent{
       background-color: transparent !important;
       box-shadow: none;
-      color: #fff;
+      color: $white-color;
       padding-top: 20px;
 
       .logo-container .brand{
           color: $white-color;
+      }
+      .navbar-brand,.navbar-nav > li > a{
+        color: $white-color;
+      }
+      .navbar-toggle .icon-bar{
+        background-color: $white-color !important;
       }
   }
   &-fixed-top{
