添加 fontawesome 字体图标

--- a/sass/parts/_variables.scss
+++ b/sass/parts/_variables.scss
@@ -36,7 +36,8 @@ $border-radius-huge: 10px !default;
 $border-radius-extreme: 30px !default;
 
 // Typography
-$font-family-sans-serif: 'Roboto', 'Helvetica', 'Arial', sans-serif !default;
+//$font-family-sans-serif: 'Roboto', 'Helvetica', 'Arial', sans-serif !default;
+$font-family-sans-serif: Helvetica, Tahoma, Arial, "Hiragino Sans GB", "Hiragino Sans GB W3", "Microsoft YaHei", STXihei, STHeiti, Heiti, SimSun, sans-serif !default;
 $headings-font-weight: 300 !default;
 
 $font-weight-light: 300 !default;
@@ -159,9 +160,9 @@ $mdb-radio-color-off: $mdb-label-color-toggle-focus !default;
 $mdb-radio-color-on: $brand-primary !default;
 
 // Buttons:
-$mdb-btn-font-size-base: 12px !default;
-$mdb-btn-font-size-lg: 14px !default;
-$mdb-btn-font-size-sm: 11px !default;
+$mdb-btn-font-size-base: 14px !default;
+$mdb-btn-font-size-lg: 16px !default;
+$mdb-btn-font-size-sm: 12px !default;
 $mdb-btn-font-size-xs: 10px !default;
 
 
