--- a/sass/parts/_navbar.scss
+++ b/sass/parts/_navbar.scss
@@ -16,7 +16,7 @@
     line-height: 30px;
     color: $nav-text-color;
     padding: 10px 15px;
-
+    font-size: 20px;
     &:hover,
     &:focus {
       color: $nav-text-color;
