--- a/sass/index.scss
+++ b/sass/index.scss
@@ -46,7 +46,6 @@
  ========================================================================== */
 .versions {
   padding: 30px 0;
-  background: #fff;
 }
 .version-pic {
   margin: 0 auto;
@@ -60,6 +59,7 @@
   padding: 14px;
   border-radius: 4px;
   margin-bottom: 30px;
+  background: #ffffff;
 }
 .media-card .media-card-text {
   font-size: 13px;
