--- a/sass/parts/_example-pages.scss
+++ b/sass/parts/_example-pages.scss
@@ -11,6 +11,7 @@
 }
 .main-raised{
     margin: -60px 30px 0px;
+    padding: 20px 0;
     border-radius: $border-radius-base * 2;
     @include shadow-16dp();
 }
@@ -106,6 +107,15 @@ h2.title{
     }
     .section-basic{
         padding-top: 15px;
+    }
+    .bgl-grey-100{
+        background-color: $grey-100;
+    }
+    .float-l{
+        float: left;
+    }
+    .float-r{
+        float: right;
     }
     //.header-filter:after{
     //    background: rgba(101, 47, 142, 0.64);
