--- a/sass/parts/_shadows.scss
+++ b/sass/parts/_shadows.scss
@@ -112,9 +112,7 @@
 }
 
 @mixin shadow-big(){
-    box-shadow: 0 16px 38px -12px rgba(0, 0, 0, $mdb-shadow-key-penumbra-opacity * 4),
-    0  4px 25px 0px rgba(0, 0, 0, $mdb-shadow-ambient-shadow-opacity),
-    0  8px 10px -5px rgba(0, 0, 0, $mdb-shadow-key-umbra-opacity);
+    box-shadow: 0 4px 12px -2px rgba(57, 57, 57, $mdb-shadow-key-penumbra-opacity * 4)
 }
 
 @mixin shadow-big-navbar(){
