--- a/sass/common.scss
+++ b/sass/common.scss
@@ -43,4 +43,9 @@
 .float-r{
     float: right;
 }
-
+.overflow{
+    white-space: nowrap;
+    overflow: hidden;
+    -ms-text-overflow: ellipsis;
+    text-overflow: ellipsis;
+}
