--- a/sass/parts/_example-pages.scss
+++ b/sass/parts/_example-pages.scss
@@ -20,6 +20,9 @@
     font-weight: $font-weight-bold;
     color: $black-color;
 }
+.word{
+    color: $black-color;
+}
 h2.title{
     margin-bottom: $margin-base * 2;
 }
