--- a/sass/common.scss
+++ b/sass/common.scss
@@ -49,3 +49,14 @@
     -ms-text-overflow: ellipsis;
     text-overflow: ellipsis;
 }
+.a-more{
+    width: auto !important;
+    float: right;
+    margin: 0;
+    display: inline-block;
+    position: relative;
+    top: -3px;
+}
+.text-p{
+    text-indent: 2em;
+}
