--- a/sass/parts/_typography.scss
+++ b/sass/parts/_typography.scss
@@ -28,7 +28,7 @@ h6, .h6{
 .footer-big h5,
 .footer-big h4,
 .media .media-heading{
-    font-weight: $font-weight-extra-bold;
+    font-weight: $font-weight-default;
     &,
     a{
         color: $black-color;
