首页调整更多按钮

--- a/sass/common.scss
+++ b/sass/common.scss
@@ -51,10 +51,8 @@
 }
 .a-more{
     width: auto !important;
-    margin: 0;
-    position: absolute;
-    top: -3px;
-    right: 2px;
+    margin: 1px;
+    float: right;
 }
 .text-p{
     text-indent: 2em;
